manifests/domains/ingress-gateway/api-routing-proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  name: prod-gateway
  labels:
    cost-center: "finops-edge-606"
    owner: "edge-team"
    pod-security.kubernetes.io/enforce: "baseline"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  name: api-routing-proxy
  namespace: prod-gateway
  labels:
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      annotations:
        argocd.argoproj.io/sync-wave: "3"
      labels:
        app: api-gateway
    spec:
      containers:
        - name: gateway
          image: nginx:alpine
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
